--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -115,9 +115,8 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="/img/thy-logo.png" alt="THY Logo">
-            <span>Turkish Airlines</span>
-        </a>
+            <img src="/img/white-logo.png" alt="THY Logo">
+            </a>
         <div class="collapse navbar-collapse justify-content-end">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -131,8 +130,8 @@
 <div class="d-flex">
     <div class="sidebar">
         <a href="/admin/dashboard" class="active"><i class="fas fa-chart-line"></i> Dashboard</a>
+        <a href="/admin/users"><i class="fas fa-user-friends"></i> User Management</a>
         <a href="#"><i class="fas fa-plane"></i> Flight Management</a>
-        <a href="#"><i class="fas fa-user-friends"></i> User Management</a>
         <a href="#"><i class="fas fa-ticket-alt"></i> Booking Overview</a>
         <a href="#"><i class="fas fa-cog"></i> System Settings</a>
     </div>
