--- a/src/main/resources/templates/admin-users.html
+++ b/src/main/resources/templates/admin-users.html
@@ -146,7 +146,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="/img/white-logo.png" alt="THY Logo">
-      </a>
+    </a>
     <div class="collapse navbar-collapse justify-content-end">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -161,9 +161,10 @@
   <div class="sidebar">
     <a href="/admin/dashboard"><i class="fas fa-chart-line"></i> Dashboard</a>
     <a href="/admin/users" class="active"><i class="fas fa-user-friends"></i> User Management</a>
-    <a href="#"><i class="fas fa-plane"></i> Flight Management</a>
-    <a href="#"><i class="fas fa-ticket-alt"></i> Booking Overview</a>
-    <a href="#"><i class="fas fa-cog"></i> System Settings</a>
+    <a href="/admin/aircrafts"><i class="fas fa-plane"></i> Aircraft Management</a>
+    <a href="/admin/airports"><i class="fas fa-city"></i> Airport Management</a>
+    <a href="/admin/bookings"><i class="fas fa-ticket-alt"></i> Booking Overview</a>
+    <a href="/admin/settings"><i class="fas fa-cog"></i> System Settings</a>
   </div>
 
   <div class="main-content">
