--- a/src/main/resources/templates/admin-system-settings.html
+++ b/src/main/resources/templates/admin-system-settings.html
@@ -13,11 +13,11 @@
     }
     .navbar {
       background-color: #C90016;
-      padding: 0.8rem 1.5rem;
+      padding: 0.1rem 1.5rem;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
     .navbar-brand img {
-      height: 38px;
+      height: 55px;
       margin-right: 10px;
     }
     .navbar-brand span {
@@ -169,12 +169,18 @@
             <div class="form-text">Ensures all new flights are created with at least this many seats.</div>
           </div>
 
+          <div class="mb-3">
+            <label for="minimumTurnaroundMinutes" class="form-label">Minimum Aircraft Turnaround Time (Minutes)</label>
+            <input type="number" class="form-control" id="minimumTurnaroundMinutes" name="minimumTurnaroundMinutes" th:value="${settings.minimumTurnaroundMinutes}" min="0">
+            <div class="form-text">Minimum time an aircraft must have between an arrival and its next departure.</div>
+          </div>
+
           <button type="submit" class="btn btn-primary">Save Settings</button>
         </form>
       </div>
     </div>
   </div>
-</div> <!-- DİKKAT: Bu div'in bitişi değişti! -->
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
