Luggage properties added

--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -170,6 +170,7 @@
                     <p class="display-4" th:text="${totalFlights}"></p>
                 </div>
             </div>
+            <!-- Bagaj istatistikleri kaldırıldı -->
         </div>
     </div>
 </div>
