Search-flights changed. From now on Passenger does not have to select a date to see flights.

--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -115,9 +115,8 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="/img/thy-logo.png" alt="THY Logo">
-            <span>Turkish Airlines</span>
-        </a>
+            <img src="/img/white-logo.png" alt="THY Logo">
+            </a>
         <div class="collapse navbar-collapse justify-content-end">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -170,7 +169,7 @@
                     <p class="display-4" th:text="${totalFlights}"></p>
                 </div>
             </div>
-            <!-- Bagaj istatistikleri kaldırıldı -->
+
         </div>
     </div>
 </div>
